@@ -4,6 +4,11 @@
 
 - v1.0.1060                                 -
 ---------------------------------------------
+- 2021-01-02                                -
+---------------------------------------------
+.: WSM: BugFix: Fixed minor issues in Invoice Module (WSM-250)
+
+---------------------------------------------
 - 2021-01-01                                -
 ---------------------------------------------
 .: WSM: BugFix: Fixed existing promotion active date and expiry date issue (WSM-252)
